--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Привет мир!</title>
+    <title>Мой сайт(сделал сам)</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-      <h1>Привет мир!</h1>
-
       <header>
       </header>
+
+      <h1>Стёпа лох</h1>
+      <div>
+        <br><h2>А это кстати Степан:</h2>
+        <br><img src="img/stepan.jpg" alt="stepalox">
+      </div>
+
 
       <footer>
       </footer>
