--- a/index.html
+++ b/index.html
@@ -2,21 +2,31 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Мой сайт(сделал сам)</title>
+    <title>Сайт настоящего приколиста(рекомендую)</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <header>
+        <h1>Сайт настоящего приколиста(рекомендую)</h1>
       </header>
-
-      <h1>Стёпа лох</h1>
-      <div>
-        <br><h2>А это кстати Степан:</h2>
+      <div style="font-size: 30px;">
+        <br>Степан:
         <br><img src="img/stepan.jpg" alt="stepalox">
       </div>
-
-
+      <div style="font-size: 30px;">
+        <br>Я не знаю что тут писать, поэтому <span style="color: red;">черешня</span>
+        <br><img src="img/cherry.jpg" alt="chereshnya">
+      </div>
+      <div style="font-size: 25px;">
+        <br>Немного репа серёги:
+        <br>
+        <br>И я решил, шо сочиню те этот гангста-рэп
+        <br>И я решил, шо сочиню те этот гангста-рэп,
+        <br>И я решил, шо сочиню те этот гангста-рэп,
+        <br>И спою тебе его.
+      </div>
       <footer>
+        <div style="text-align: right;color:grey;">Создатель сайта: Пашок</div>
       </footer>
   </body>
 </html>
