--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <br>И я решил, шо сочиню те этот гангста-рэп,
         <br>И спою тебе его.
       </div>
+      <div style="font-size: 30px;">
+        <br>Автор сайта любит постиронию
+        <br><img src="img/let.jpg" alt="letov">
+      </div>
       <footer>
         <div style="text-align: right;color:grey;">Создатель сайта: Пашок</div>
       </footer>
