--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br><img src="img/cherry.jpg" alt="chereshnya">
       </div>
       <div style="font-size: 25px;">
-        <br>Немного репа серёги:
+        <br><div style="font-size: 30px;">Немного репа серёги:</div>
         <br>
         <br>И я решил, шо сочиню те этот гангста-рэп
         <br>И я решил, шо сочиню те этот гангста-рэп,
